src/analizador/minilengcompiler.java
/* Generated By:JavaCC: Do not edit this line. minilengcompiler.java */
package analizador;
import java.io.*;
import lib.aviso.*;
import lib.semantico.*;
import java.util.ArrayList;
import lib.semantico.Simbolo.*;


public class minilengcompiler implements minilengcompilerConstants {

  static boolean errorSintactico = false;
  static TablaSimbolos tabla_simbolos = new TablaSimbolos();
  static int nivel = 0;
  static int direccion=3;
  static int ejecucion_correcta=1;

         public static void main(String args []) throws ParseException {
            if (args.length != 0 ) {
                        File tmp = new File(args[0]);
                        String file = tmp.getAbsolutePath();
                        try {
                                minilengcompiler parser = new minilengcompiler(new FileInputStream(file));
                        }
                        catch (FileNotFoundException e) {
                                System.out.printf("No existe el fichero: "+ file + "\u005cn");
                                System.exit(1);
                        }
        }
        else {
            System.out.printf("Leyendo de la entrada estandar..." + "\u005cn");
                        minilengcompiler parser = new minilengcompiler(System.in);
        }
                try {
                    minilengcompiler.programa();

                    if ( errorSintactico ) {
                                System.out.println("Hay uno o m\u00e1s errores sint\u00e1cticos");
                                System.exit(1);
                    }

                    System.out.println("Analizado correctamente");
                }
                catch(TokenMgrError e) {
                     // ERRORES LEXICOS
                     try {
                                String simbolo = String.valueOf(minilengcompilerTokenManager.input_stream.readChar());
                        String fil = String.valueOf(minilengcompilerTokenManager.input_stream.getEndLine());
                        String col = String.valueOf(minilengcompilerTokenManager.input_stream.getEndColumn());

                        System.err.println("ERROR L\u00c9XICO (<" + fil + ", " + col + ">): s\u00edmbolo no reconocido: <" + simbolo + ">");
                        ejecucion_correcta=0;
                        return;
                     }
                     catch (Exception ex) { }
                }
         }

         private static void error_sintactico(ParseException e, String mensaje) {
        // ERRORES SINTACTICOS
        Token ultimoLeido = minilengcompiler.getNextToken();
        int fil = ultimoLeido.beginLine;
        int col = ultimoLeido.beginColumn;
        String current = ultimoLeido.image;

        System.out.println("ERROR SINT\u00c1CTICO (<" + fil  + ", " + col + ">): Token obtenido -> " + current + " -> " + mensaje );
        if ( !errorSintactico ) {
                        errorSintactico = true;
                }
                ejecucion_correcta=0;
        }

        private static void error_semantico(String name, int f, int col, Exception except) {
                // ERRORES SEMÁNTICOS
                if (except instanceof SimboloNoEncontradoException) {
                        System.out.println("ERROR SEM\u00c1NTICO: <No se ha encontrado el s\u00edmbolo llamado: " + name + "> en (<" + f  + ", " + col + ">)");
            }
                else if (except instanceof SimboloYaDeclaradoException) {
                        System.out.println("ERROR SEM\u00c1NTICO: <Ya ha sido declarado el s\u00edmbolo llamado: " + name + "> en (<" + f  + ", " + col + ">)");
                }
                ejecucion_correcta=0;
        }

  static final public void programa() throws ParseException {
  Token p=null;
    try {
      jj_consume_token(tPROGRAMA);
      p = jj_consume_token(tIDENTIFICADOR);
                  if(p!=null){
                        tabla_simbolos.introducir_programa(p.image,0);
                  }
      jj_consume_token(tFIN_SENTENCIA);
      declaracion_variables();
      declaracion_acciones();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPRINCIPIO:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        bloque_sentencias();
      }
           if(ejecucion_correcta==1) {
                        tabla_simbolos.eliminar_variables(nivel);
                        tabla_simbolos.eliminar_acciones(nivel);
                        tabla_simbolos.eliminar_programa();
           }
    } catch (ParseException e) {
                error_sintactico(e,"Sintaxis de programa incorrecta");
    }
  }

  static final public void sentencia() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tLEER:
        leer();
        jj_consume_token(tFIN_SENTENCIA);
        break;
      case tESCRIBIR:
        escribir();
        jj_consume_token(tFIN_SENTENCIA);
        break;
      case tIDENTIFICADOR:
        jj_consume_token(tIDENTIFICADOR);
        asignacion_invocacion_accion();
        jj_consume_token(tFIN_SENTENCIA);
        break;
      case tPRINCIPIO:
        seleccion();
        break;
      case tMQ:
        mientras_que();
        break;
      case tSI:
        si();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de sentencia incorrecta");
    }
  }

  static final public void asignacion_invocacion_accion() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOAS:
        asignacion();
        break;
      case tIDENTIFICADOR:
        invocacion_accion();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"No se encuentra asignacion o invocacion a accion");
    }
  }

  static final public void asignacion() throws ParseException {
    try {
      jj_consume_token(tOAS);
      expresion();
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de asignacion incorrecta");
    }
  }

  static final public void invocacion_accion() throws ParseException {
    try {
      jj_consume_token(tIDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tFIN_SENTENCIA:
        jj_consume_token(tFIN_SENTENCIA);
        break;
      case tPA:
        argumentos();
        jj_consume_token(tFIN_SENTENCIA);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de invocacion a accion incorrecta");
    }
  }

  static final public void declaracion_variables() throws ParseException {
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tENTERO:
        case tBOOLEANO:
        case tCARACTER:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        declaracion();
        jj_consume_token(tFIN_SENTENCIA);
      }
    } catch (ParseException e) {
        error_sintactico(e,"Declaracion de variables incorrecta");
    }
  }

  static final public void declaracion() throws ParseException {
  Tipo_variable tipo = null;
  ArrayList<Token > tokens = null;
    try {
      tipo = tipo_variables();
      tokens = identificadores();
                for(int i=0;i<tokens.size();i++) {
                  try {
                        tabla_simbolos.introducir_variable(tokens.get(i).image,tipo,nivel,direccion);
                        direccion=direccion+1;
                  } catch(SimboloYaDeclaradoException e) {
                      token = tokens.get(i);
                          error_semantico(token.image, token.beginLine, token.beginColumn, e);
                    }
                }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis incorrecta");
    }
  }

  static final public Tipo_variable tipo_variables() throws ParseException {
  Tipo_variable tipo=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTERO:
        jj_consume_token(tENTERO);
                     tipo=Tipo_variable.ENTERO;
        break;
      case tCARACTER:
        jj_consume_token(tCARACTER);
                         tipo=Tipo_variable.CHAR;
        break;
      case tBOOLEANO:
        jj_consume_token(tBOOLEANO);
                         tipo=Tipo_variable.BOOLEANO;
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"No se ha encontrado tipo de variable");
    }
 {if (true) return tipo;}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Token> identificadores() throws ParseException {
  Token t=null;
  ArrayList<Token> tokens = new ArrayList<Token>();
    try {
      t = jj_consume_token(tIDENTIFICADOR);
                  if(t!=null){
                                tokens.add(t);
                        }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        jj_consume_token(tCOMA);
        t = jj_consume_token(tIDENTIFICADOR);
                  if(t!=null){
                        tokens.add(t);
                        }
      }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis en definicion de identificadores incorrecta");
    }
 {if (true) return tokens;}
    throw new Error("Missing return statement in function");
  }

  static final public void declaracion_acciones() throws ParseException {
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tACCION:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        declaracion_accion();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Declaracion de acciones incorrecta");
    }
  }

  static final public void declaracion_accion() throws ParseException {
  int direccion_anterior=direccion;
    try {
      cabecera_accion();
      declaracion_variables();
      declaracion_acciones();
                                                                           nivel=nivel+1;
      bloque_sentencias();
          tabla_simbolos.eliminar_variables(nivel);
          tabla_simbolos.eliminar_parametros(nivel);
          direccion=direccion_anterior;
          nivel=nivel-1;
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de accion incorrecta");
    }
  }

  static final public void cabecera_accion() throws ParseException {
  Token t=null;
    try {
      jj_consume_token(tACCION);
      t = jj_consume_token(tIDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPA:
        parametros_formales();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(tFIN_SENTENCIA);
                if(t != null){
                  try {
                        tabla_simbolos.introducir_accion(t.image,nivel,direccion);
                        direccion = direccion+1;
                  } catch(SimboloYaDeclaradoException e) {
                          error_semantico(t.image, t.beginLine, t.beginColumn, e);
                    }
                }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis en definicion de accion incorrecta");
    }
  }

  static final public void parametros_formales() throws ParseException {
    try {
      jj_consume_token(tPA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tVAL:
      case tREF:
        parametros();
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case tFIN_SENTENCIA:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(tFIN_SENTENCIA);
          parametros();
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de parametros de accion incorrecta");
    }
  }

  static final public void parametros() throws ParseException {
  ArrayList<Token > tokens=null;
  Tipo_variable tipo=null;
  Clase_parametro clase=null;
    try {
      clase = clase_parametros();
      tipo = tipo_variables();
      tokens = identificadores();
          for(int i = 0; i < tokens.size(); i++) {
            try {
                  tabla_simbolos.introducir_parametro(tokens.get(i).image,tipo,clase,nivel,direccion);
                  direccion = direccion+1;
                } catch(SimboloYaDeclaradoException e) {
                        token = tokens.get(i);
                        error_semantico(token.image, token.beginLine, token.beginColumn, e);
                  }
          }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de parametros incorrecta");
    }
  }

  static final public Clase_parametro clase_parametros() throws ParseException {
  Clase_parametro clase=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tVAL:
        jj_consume_token(tVAL);
                 clase=Clase_parametro.VAL;
        break;
      case tREF:
        jj_consume_token(tREF);
                   clase=Clase_parametro.REF;
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Tipo de parametro no encontrado");
    }
 {if (true) return clase;}
    throw new Error("Missing return statement in function");
  }

  static final public void bloque_sentencias() throws ParseException {
    try {
      jj_consume_token(tPRINCIPIO);
      lista_sentencias();
      jj_consume_token(tFIN);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de bloque de sentencias incorrecta");
    }
  }

  static final public void lista_sentencias() throws ParseException {
    try {
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPRINCIPIO:
        case tMQ:
        case tSI:
        case tESCRIBIR:
        case tLEER:
        case tIDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        sentencia();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de sentencias incorrecta");
    }
  }

  static final public void leer() throws ParseException {
    try {
      jj_consume_token(tLEER);
      jj_consume_token(tPA);
      identificadores();
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de leer incorrecta");
    }
  }

  static final public void escribir() throws ParseException {
    try {
      jj_consume_token(tESCRIBIR);
      jj_consume_token(tPA);
      lista_escribibles();
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de escribir incorrecta");
    }
  }

  static final public void caraent() throws ParseException {
    try {
      jj_consume_token(tCARAENT);
      jj_consume_token(tPA);
      expresion();
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de caraent incorrecta");
    }
  }

  static final public void entacar() throws ParseException {
    try {
      jj_consume_token(tENTACAR);
      jj_consume_token(tPA);
      expresion();
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de entacar incorrecta");
    }
  }

  static final public void lista_escribibles() throws ParseException {
    try {
      expresion();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_7;
        }
        jj_consume_token(tCOMA);
        expresion();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de escribir incorrecta ");
    }
  }

  static final public void mientras_que() throws ParseException {
    try {
      jj_consume_token(tMQ);
      expresion();
      lista_sentencias();
      jj_consume_token(tFMQ);
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de mientras que incorrecta");
    }
  }

  static final public void si() throws ParseException {
    try {
      jj_consume_token(tSI);
      expresion();
      jj_consume_token(tENT);
                                      nivel=nivel+1;
      lista_sentencias();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tSI_NO:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_8;
        }
        jj_consume_token(tSI_NO);
        lista_sentencias();
      }
      jj_consume_token(tFSI);
          nivel=nivel-1;
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de si incorrecta");
    }
  }

  static final public void argumentos() throws ParseException {
    try {
      jj_consume_token(tPA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTACAR:
      case tCARAENT:
      case tRESTA:
      case tNOT:
      case tENTERO:
      case tTRUE:
      case tFALSE:
      case tPA:
      case tVALOR_ENTERO:
      case tVALOR_CARACTER:
      case tVALOR_CADENA:
      case tVALOR_CADENA_VACIA:
      case tIDENTIFICADOR:
        lista_expresiones();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(tPC);
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de lista de argumentos incorrecta");
    }
  }

  static final public void lista_expresiones() throws ParseException {
    try {
      expresion();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_9;
        }
        jj_consume_token(tCOMA);
        expresion();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Estructura de lista de expresiones incorrecta");
    }
  }

  static final public void seleccion() throws ParseException {
    try {
      jj_consume_token(tPRINCIPIO);
      jj_consume_token(tIDENTIFICADOR);
      jj_consume_token(tLLAVE_IZQ);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPRINCIPIO:
        case tMQ:
        case tSI:
        case tESCRIBIR:
        case tLEER:
        case tIDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_10;
        }
        sentencia();
      }
      jj_consume_token(tLLAVE_DCHA);
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de seleccion incorrecta");
    }
  }

  static final public void expresion() throws ParseException {
    try {
      factor();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tMOD:
        case tSUMA:
        case tRESTA:
        case tMULL:
        case tDIV:
        case tDIV1:
        case tMAYOR:
        case tMENOR:
        case tIGUAL:
        case tMAI:
        case tMEI:
        case tNI:
        case tAND:
        case tOR:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
        operador();
        factor();
      }
    } catch (ParseException e) {
        error_sintactico(e,"Sintaxis de expresion incorrecta");
    }
  }

  static final public void operador() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSUMA:
      case tRESTA:
        operador_aditivo();
        break;
      case tMOD:
      case tMULL:
      case tDIV:
      case tDIV1:
      case tMAYOR:
      case tMENOR:
      case tIGUAL:
      case tMAI:
      case tMEI:
      case tNI:
      case tAND:
      case tOR:
        operador2();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"No se ha encontrado un operador valido");
    }
  }

  static final public void operador2() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMOD:
      case tMULL:
      case tDIV:
      case tDIV1:
        operador_multiplicativo();
        break;
      case tMAYOR:
      case tMENOR:
      case tIGUAL:
      case tMAI:
      case tMEI:
      case tNI:
      case tAND:
      case tOR:
        operador3();
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
        error_sintactico(e,"");
    }
  }
